[package]
name = "vywrs"
version = "0.3.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]
edition = "2021"

[dependencies]
yew = "0.18"
yewtil = { version = "0.4", features = ["neq"] }
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytesize = "1"
anyhow = "1"
wee_alloc = "0.4"
yew-router = "0.15"
