[package]
name = "vywrs"
version = "0.3.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytesize = "1"
anyhow = "1"
yew-router = "0.17"
gloo-net = { version = "0.2", features = ["json"] }
gloo-console = "0.2"
